# GameEngine2D-Advanced-CPP

./: CMakeLists.txt  README.md
include/: types.h
include/audio/: audio_manager.h
include/core/: application.h  time_manager.h  window.h
include/graphics/: renderer.h  shader.h
include/physics/: physics_engine.h
include/scene/: scene_manager.h
include/utils/: file_utils.h  logger.h  string_utils.h
src/: main.cpp
src/audio/: audio_manager.cpp
src/core/: application.cpp  time_manager.cpp  window.cpp
src/graphics/: renderer.cpp  shader.cpp
src/physics/: physics_engine.cpp
src/scene/: scene_manager.cpp
src/utils/: file_utils.cpp  logger.cpp  string_utils.cpp
